--- a/FindTrainingVideos/src/main/resources/templates/WEB-INF/index.html
+++ b/FindTrainingVideos/src/main/resources/templates/WEB-INF/index.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
     <h1>Training Videos</h1>
-    <a th:href="@{/signin}"><h2>Sign In</h2></a>
+    <a th:href="@{/login}"><h2>Sign In</h2></a>
     <a th:href="@{/signup}"><h2>Sign Up</h2></a>
 </div>
 </body>
