--- a/FindTrainingVideos/src/main/resources/templates/WEB-INF/index.html
+++ b/FindTrainingVideos/src/main/resources/templates/WEB-INF/index.html
@@ -8,7 +8,7 @@
 <div class="container">
     <h1>Training Videos</h1>
     <a th:href="@{/login}"><h2>Sign In</h2></a>
-    <a th:href="@{/signup}"><h2>Sign Up</h2></a>
+    <a th:href="@{/register}"><h2>Sign Up</h2></a>
 </div>
 </body>
 </html>
