--- a/FindTrainingVideos/src/main/resources/templates/login.html
+++ b/FindTrainingVideos/src/main/resources/templates/login.html
@@ -35,45 +35,35 @@
     console.log(login);
     let password = document.getElementById("password").value;
     console.log(password);
-    let response = await fetch("/login",
-            {
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json',
-                'Accept': 'application/json'
-              },
-              body: JSON.stringify({
-                login: login,
-                password: password
-              })
-            });
-
-    if (response.status === 200) {
-      localStorage.setItem("token", response.headers.get("Authorization"));
-      if (login === "pasyagitka") {
-        console.log('adminmain');
-        document.location.href = "/adminmain";
-      /*  var req = new XMLHttpRequest();
-        req.open('GET', '/adminmain', true); //true means request will be async
-        req.onreadystatechange = function (aEvt) {
-          if (req.readyState == 4) {
-            if(req.status == 200) {
-              document.write(req.responseText);
-            }
-            else
-            alert("Error loading page\n");
+    fetch("/login", { method: 'POST',  headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' }, body: JSON.stringify({ login: login, password: password }) })
+    .then((response) => {
+        if (response.status === 200) {
+          localStorage.setItem("token", response.headers.get("Authorization"));
+          if (login === "pasyagitka") {
+            console.log('adminmain');
+            document.location.href = "/adminmain";
+            /*  var req = new XMLHttpRequest();
+              req.open('GET', '/adminmain', true); //true means request will be async
+              req.onreadystatechange = function (aEvt) {
+                if (req.readyState == 4) {
+                  if(req.status == 200) {
+                    document.write(req.responseText);
+                  }
+                  else
+                  alert("Error loading page\n");
+                }
+              };
+              req.setRequestHeader('Authorization', response.headers.get("Authorization"));
+              req.send();*/
+          } else {
+            console.log('usermain');
+            document.location.href = "/usermain";
           }
-        };
-        req.setRequestHeader('Authorization', response.headers.get("Authorization"));
-        req.send();*/
       } else {
-        console.log('usermain');
-        document.location.href = "/usermain";
+        document.querySelector("#result").style.color = "#e74c3c";
+        document.querySelector("#result").innerHTML = data.error;
       }
-    } else {
-      document.querySelector("#result").style.color = "#e74c3c";
-      document.querySelector("#result").innerHTML = data.error;
-    }
+    });
   }
 </script>
 </body>
