filters: theme, author

--- a/FindTrainingVideos/src/main/resources/templates/adminmain.html
+++ b/FindTrainingVideos/src/main/resources/templates/adminmain.html
@@ -8,12 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function() {
-             fetch('/adminmain/getDisciplines', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
+             fetch('/getDisciplines', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
                  .then((response) => { return response.json();})
                  .then(pdata => {
                      let tr = '';
                      pdata.forEach(value => {
-                         console.log(value);
                          tr += `<option value="${value.id}">${value.name}</option>`;
                      })
                      document.querySelector('#disciplinesSelect').innerHTML = tr;
@@ -24,9 +23,7 @@
                 .then((response) => { return response.json();})
                 .then(pdata => {
                     let tr = '';
-                    console.log(pdata);
                     pdata.forEach(function (value) {
-                        console.log(value);
                         tr += `<tr>
                                    <td>${value.title}</td>
                                    <td>${value.theme}</td>
