--- a/FindTrainingVideos/src/main/resources/templates/usermain.html
+++ b/FindTrainingVideos/src/main/resources/templates/usermain.html
@@ -9,6 +9,25 @@
 </head>
 <script>
     $(document).ready(function() {
+        fetch('/getAuthors', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
+            .then((response) => { return response.json();})
+            .then(pdata => {
+                let tr = `<option value="All authors" selected="selected">All authors</option>`;
+                pdata.forEach(value => {
+                    tr += `<option value="${value}">${value}</option>`;
+                })
+                document.querySelector('#filterauthor').innerHTML = tr;
+            });
+        fetch('/getThemes', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
+            .then((response) => { return response.json();})
+            .then(pdata => {
+                let tr = `<option value="All"  selected="selected">All themes</option>`;
+                pdata.forEach(value => {
+                    tr += `<option value="${value}">${value}</option>`;
+                })
+                document.querySelector('#filtertheme').innerHTML = tr;
+            });
+
         fetch('/usermain/getVideoList', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
             .then((response) => { return response.json();})
             .then(pdata => {
@@ -46,7 +65,6 @@
         <!--<input type="button" class="btn btn-outline-light" value="Sign Out"/>-->
     </nav>
     <div class="row">
-
         <div class="col container" style="margin: 10px;">
             <div class="row">
                 <div class="col-10">
@@ -60,40 +78,14 @@
         <div class="container" style="margin: 10px;">
             <h3 style="padding: 10px;">Filter</h3>
             <div class="btn-group">
-                <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Theme
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Theme</a>
-                    <a class="dropdown-item" href="#">Another Theme</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                </div>
+                <select class="form-select" aria-label="Discipline" id="filtertheme" onmouseup="filter('theme')">
+                    <option selected>Theme</option>
+                </select>
             </div>
             <div class="btn-group">
-                <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Discipline
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Discipline</a>
-                    <a class="dropdown-item" href="#">Another Discipline</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                </div>
-            </div>
-            <div class="btn-group">
-                <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Author
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Author</a>
-                    <a class="dropdown-item" href="#">Another Author</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                </div>
+                <select class="form-select" aria-label="Discipline" id="filterauthor" onmouseup="filter('author')">
+                    <option selected>Author</option>
+                </select>
             </div>
         </div>
         <h3 style="align-self: center">List</h3>
@@ -114,6 +106,30 @@
     </div>
 </div>
 <script>
+    async function filter(criteria){
+        let parm = document.getElementById(`filter${criteria}`).value;
+        fetch(`/usermain/filterVideos?criteria=${criteria}&filter=${parm}`, {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
+            .then((response) => { return response.json();})
+            .then(pdata => {
+                let tr = '';
+                pdata.forEach(function (value) {
+                    tr += `
+                     <div class="card" style="width: 18rem; margin: 20px">
+                           <video src="${value.url}" controls></video>
+                            <div class="card-body">
+                                <h5 class="card-title">${value.title}</h5>
+                                <p class="card-text">${value.theme}, ${value.description}</p>
+                                <a href="${value.url}" class="btn btn-outline-secondary">Watch</a>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">${new Date(value.date).toDateString()}, ${value.author}</small>
+                            </div>
+                       </div>`;
+                });
+                document.querySelector('#videoList').innerHTML = tr;
+            }).then().catch(error => {console.log(error);
+        });
+    }
     async function search() {
         let search = document.getElementById("search-input").value;
         let url = (search.length === 0) ? `/usermain/getVideoList` : `/usermain/searchVideos/${search}`;
@@ -135,7 +151,7 @@
                             </div>
                        </div>`;
                 });
-                document.querySelector('#videoList').innerHTML = tr; //Append the data
+                document.querySelector('#videoList').innerHTML = tr;
             }).then().catch(error => {console.log(error);
         });
     }
